<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddCardActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/swipe_to_btn"
                android:rotation="180"
                android:src="@mipmap/right_arrow"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/purple_500" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/add_card_str"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/card_dummy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/card_information"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/grey_stroke_border"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/grey"
            android:hint="@string/name_on_card"
            android:padding="10dp"
            android:singleLine="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/grey_stroke_border"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/grey"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:visibility="gone" />


        <com.stripe.android.view.CardMultilineWidget
            android:id="@+id/cardValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/e_mail_for_receipt"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/grey_stroke_border"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/grey"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
